inside ticket service admin controller added for creating and updating concerts also working via gateway

--- a/frontend/src/app/modules/shared/generic-auth-layout/generic-auth-layout.component.html
+++ b/frontend/src/app/modules/shared/generic-auth-layout/generic-auth-layout.component.html
@@ -1,9 +1,9 @@
 <div class="auth-bg">
   <div class="auth-wrapper">
     <!-- Logo -->
-    <img class="auth-logo" src="/images/logo.svg" alt="Logo" />
+    <img class="auth-logo" src="/images/logo.png" alt="Logo" />
 
-    <div class="auth-page-title">Welcome to ITGI Claim Portal</div>
+    <div class="auth-page-title">Welcome to COLDPLAY</div>
     <!-- Card Content Slot -->
     <div class="auth-card">
       <div class="auth-card-title">
