--- a/frontend/src/app/modules/shared/navbar/navbar.component.html
+++ b/frontend/src/app/modules/shared/navbar/navbar.component.html
@@ -3,7 +3,7 @@
 >
   <div class="flex items-center gap-6">
     <img
-      src="/svg/hamburger-menu.svg"
+      src="/svg/hamburger-menu.jpg"
       alt="Menu"
       class="h-9 w-9 cursor-pointer hover:opacity-80 transition-opacity duration-150"
       (click)="toggleSidebar()"
@@ -11,7 +11,7 @@
 
     <a routerLink="/dashboard/home">
       <img
-        src="/images/logo.svg"
+        src="/images/logo.jpg"
         alt="Logo"
         class="hidden sm:block h-12 cursor-pointer hover:opacity-90 transition-opacity duration-150"
       />
