--- a/frontend/src/app/modules/shared/sidebar/sidebar.component.html
+++ b/frontend/src/app/modules/shared/sidebar/sidebar.component.html
@@ -15,7 +15,7 @@
   <div class="flex items-center justify-between p-4 border-b border-off-white4">
     <div></div>
     <a routerLink="/dashboard/home">
-      <img src="/images/logo.svg" alt="Logo" class="h-13 cursor-pointer" />
+      <img src="/images/logo.png" alt="Logo" class="h-13 cursor-pointer" />
     </a>
     <button
       (click)="toggleSidebar()"
