--- a/frontend/src/app/components/portal/home/home.component.html
+++ b/frontend/src/app/components/portal/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col justify-center items-center mt-10 text-center px-4">
-  <img src="/images/logo.svg" alt="Logo" class="h-28 mb-6" />
+  <img src="/images/logo.png" alt="Logo" class="h-28 mb-6" />
 
   <h1 class="text-3xl sm:text-4xl font-bold text-itgi-green mb-4">
     Welcome to the ITGI Claim Portal
