notification service added,new kakfa topics handled

--- a/frontend/src/app/components/portal/user-login/user-login.component.html
+++ b/frontend/src/app/components/portal/user-login/user-login.component.html
@@ -9,11 +9,11 @@
     class="px-3 pb-3"
   >
     <!-- Forgot Password Link -->
-    <div class="flex justify-end mt-3 mb-2">
+    <!-- <div class="flex justify-end mt-3 mb-2">
       <button type="button" class="auth-link" (click)="toggleForgotPassword()">
         Forgot Password?
       </button>
-    </div>
+    </div> -->
 
     <!-- Username -->
     <div class="mt-3 mb-2">
