--- a/frontend/src/app/modules/shared/tabs-container/tabs-container.component.html
+++ b/frontend/src/app/modules/shared/tabs-container/tabs-container.component.html
@@ -1,6 +1,6 @@
-<div>
+<!-- <div> -->
   <!-- Tab Headers -->
-  <div class="flex justify-center">
+  <!-- <div class="flex justify-center">
     <div
       *ngFor="let tab of tabs.toArray(); let i = index"
       (click)="selectTab(i)"
@@ -13,10 +13,10 @@
     >
       {{ tab.title }}
     </div>
-  </div>
+  </div> -->
 
   <!-- Tab Content -->
-  <div class="p-4 border border-off-white4 rounded-sm bg-white">
+  <!-- <div class="p-4 border border-off-white4 rounded-sm bg-white">
     <ng-content></ng-content>
   </div>
-</div>
+</div> -->
